k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: faladesk
  labels:
    app: faladesk
    component: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faladesk
      component: redis
  template:
    metadata:
      labels:
        app: faladesk
        component: redis
    spec:
      containers:
        - name: redis
          image: bitnami/redis:7.0
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
